--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,8 @@ SCAMEVO_DB_PATH=storage/metadata.sqlite3
 # SCAMEVO_DATABASE_URL=postgresql://USER:PASSWORD@HOST/DB?sslmode=require
 SCAMEVO_DATABASE_URL=
 
+SCAMEVO_OPENAI_API_KEY=
+
 # Safety / gating
 SCAMEVO_RESEARCH_MODE=1
 SCAMEVO_DO_NOT_DEPLOY=1
