ready to deploy

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,12 @@ SCAMEVO_APP_NAME=SCAM-EVO Backend
 SCAMEVO_STORAGE_DIR=storage
 SCAMEVO_DB_PATH=storage/metadata.sqlite3
 
+# CORS (comma-separated)
+# Example: SCAMEVO_CORS_ORIGINS=http://localhost:5173,http://127.0.0.1:5173
+SCAMEVO_CORS_ORIGINS=
+# 1/true enables cookies/credentials. Leave 0/false for typical dev.
+SCAMEVO_CORS_ALLOW_CREDENTIALS=0
+
 # Neon Postgres (paste your Neon connection string here)
 # Example:
 # SCAMEVO_DATABASE_URL=postgresql://USER:PASSWORD@HOST/DB?sslmode=require
