--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ MarkupSafe==3.0.3
 mpmath==1.3.0
 networkx==3.6.1
 numpy==2.4.0
+openpyxl==3.1.5
 packaging==25.0
 pillow==12.0.0
 pluggy==1.6.0
@@ -29,6 +30,7 @@ pydantic==2.12.5
 pydantic_core==2.41.5
 Pygments==2.19.2
 pytest==8.4.2
+python-docx==1.2.0
 python-dotenv==1.2.1
 python-multipart==0.0.12
 PyYAML==6.0.3
